--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
 h1 {
-  color: #369;
+  color: #FEBB31; /* Mustard */
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+}
+
+a {
+  color: #FEBB31; /* Mustard */
+}
+
+body {
+  background-color: black;
+
 }
