Heartbeat sound - keep tunecast alive

--- a/app/play.component.css
+++ b/app/play.component.css
@@ -1,25 +1,73 @@
-h4 {
-  position: relative;
-  text-align: center;
-}
+  /* Mobile = 360 x 640 */
 
-.play .answer .next {
-  padding-bottom: 1em;
-    max-height: 4em;
-}
+  .btitle {
+      text-align: center;
+      line-height: 3em;
+      font-size: 150%;
+  }
+
+  .btitle:active {
+    border-top-style:solid;
+    border-top-width:10px;
+    border-top-color:#FF4545;
+  }
 
 
-.play {
-  background-color: cyan;
+  @media (max-height:639px) and (orientation: portrait){
+    #container {
+      height:460px;
+      width:360px;
+      background-color: #000000;
+    }
 
-}
+    .play, .answer, .next {
+        padding-bottom: 0;
+        height: 29%;
+    }
 
-.answer {
-background-color: yellow;
+    .play {
+      background-color: #25E5B5; /* Blue */
+        margin-top: 5px;
+        margin-bottom: 10px;
+     }
 
-}
+    .answer {
+      background-color: #A965CA; /* Purple */
+      margin-bottom: 10px;
+    }
 
-.next {
-background-color: green;
+    .next {
+      background-color: #9ACC00; /* Green / lime*/
+      margin-bottom: 0px;
+    }
+  }
 
-}
+  @media (orientation: landscape) {
+    #container {
+      height: 360px;
+      width: 640px
+      background-color: #000000;
+    }
+
+    .play, .answer, .next {
+        float: left;
+        padding-bottom: 0;
+        width: 31%;
+        height:95%;
+    }
+
+    .play {
+        background-color: #25E5B5; /* Blue */
+        margin-right: 10px;
+     }
+
+    .answer {
+        background-color: #A965CA; /* Purple */
+        margin-right: 10px;
+    }
+
+    .next {
+        background-color: #9ACC00; /* Green / lime*/
+        margin-right: 0;
+    }
+  }
