--- a/app/play.component.css
+++ b/app/play.component.css
@@ -1,69 +1,42 @@
   /* Mobile = 360 x 640 */
-
-  .btitle {
-      text-align: center;
-      line-height: 3em;
-      font-size: 150%;
-  }
-
-  .btitle:active {
-    border-top-style:solid;
-    border-top-width:10px;
-    border-top-color:#FF4545;
-  }
-
-
-  @media (max-height:639px) and (orientation: portrait){
-    #container {
-      height:460px;
-      width:360px;
-      background-color: #000000;
-    }
-
+  @media (orientation: portrait){
     .play, .answer, .next {
         padding-bottom: 0;
-        height: 29%;
+        height: 31%;
     }
 
     .play {
       background-color: #25E5B5; /* Blue */
-        margin-top: 5px;
-        margin-bottom: 10px;
+        margin-top: 1%;
+        margin-bottom: 3%;
      }
 
     .answer {
       background-color: #A965CA; /* Purple */
-      margin-bottom: 10px;
+      margin-bottom: 3%;
     }
 
     .next {
       background-color: #9ACC00; /* Green / lime*/
-      margin-bottom: 0px;
     }
   }
 
   @media (orientation: landscape) {
-    #container {
-      height: 360px;
-      width: 640px
-      background-color: #000000;
-    }
-
     .play, .answer, .next {
         float: left;
         padding-bottom: 0;
-        width: 31%;
-        height:95%;
+        width: 31.33%;
+        height: 98%;
     }
 
     .play {
         background-color: #25E5B5; /* Blue */
-        margin-right: 10px;
+        margin-right: 3%;
      }
 
     .answer {
         background-color: #A965CA; /* Purple */
-        margin-right: 10px;
+        margin-right: 3%;
     }
 
     .next {
