--- a/app/play.component.html
+++ b/app/play.component.html
@@ -1,4 +1,4 @@
-    <div id="container">
+    <div class="container">
       <!-- <p>counter: {{counter}}</p> -->
       <div class="play btitle" (tap)="play()">
         Play
